syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest {};
message ListFilesResponse {
    repeated string filenames = 1;
};

message DownloadRequest {
    string filename = 1;
};

message DownloadResponse {
    bytes content = 1;
};

service FileService {
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc Download(DownloadRequest) returns (stream DownloadResponse);
}

